--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "upload_api",
   "version": "1.0.0",
   "main": "server.js",
-  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
@@ -13,7 +12,8 @@
     "sqlite3": "^5.1.6",
     "sqlite": "^4.1.2",
     "mammoth": "^1.6.0",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "mongodb": "^6.7.0"
   }
 }
 
