--- a/package.json
+++ b/package.json
@@ -2,18 +2,16 @@
   "name": "upload_api",
   "version": "1.0.0",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "cors": "^2.8.5",
-    "sqlite3": "^5.1.6",
-    "sqlite": "^4.1.2",
-    "mammoth": "^1.6.0",
-    "pdf-parse": "^1.1.1",
-    "mongodb": "^6.7.0"
+    "mongodb": "^6.8.0"
   }
 }
+
 
